// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Signup /> Check how renders should render with Step1 by default 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ VOJFF"
  >
    <h3
      class="sc-jrAGrp hNpMLZ"
    >
      Register new account
    </h3>
    <div
      class="progress-bar-box"
    >
      <div
        class="sc-kEjbxe czbdkt"
      >
        <div
          class="step-box active"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-number-visible"
            >
              1
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill"
          />
        </div>
        <div
          class="step-box"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-number-visible"
            >
              2
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill"
          />
        </div>
        <div
          class="step-box"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-number-visible"
            >
              3
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-hKgILt cAntWy"
      height="46"
    >
      <form
        action="#"
        class="formik-form"
      >
        <div
          class="sc-gsTCUz mRRDa"
          data-testid="Step1"
          style="opacity: 0;"
        >
          <div
            class="sc-dQppl eVncb"
            type="email"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="email"
            >
              Email
            </label>
            <input
              autocomplete="email"
              class="sc-bqyKva dfRFOj"
              data-testid="Step1-email"
              id="email"
              name="email"
              placeholder="Your email address"
              type="email"
              value=""
            />
          </div>
          <span
            class="sc-iBPRYJ fQTCab"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            We will send verification link to this email, so make sure it is correct. If you provide someone else's email, that person will have access to that account.
          </span>
          <div
            class="sc-dQppl echBYe"
            type="checkbox"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="hideEmail"
            >
              Hide my email address from others
            </label>
            <input
              class="sc-bqyKva dfRFOj"
              data-testid="Step1-hideEmail"
              id="hideEmail"
              name="hideEmail"
              type="checkbox"
              value="false"
            />
          </div>
          <span
            class="sc-iBPRYJ fQTCab"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            Email is visible to everyone by default. You can hide it from others (it will still be visible to people who will place order with you)
          </span>
          <div
            class="sc-dQppl eVncb"
            type="text"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="username"
            >
              Username
            </label>
            <input
              autocomplete="username"
              class="sc-bqyKva dfRFOj"
              data-testid="Step1-username"
              id="username"
              name="username"
              placeholder="Your identifier (3-20 characters)"
              type="text"
              value=""
            />
          </div>
          <span
            class="sc-iBPRYJ fQTCab"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            Username will be visible to everyone and cannot be changed
          </span>
          <div
            class="sc-dQppl eVncb"
            type="password"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="password"
            >
              Password
            </label>
            <input
              autocomplete="off"
              class="sc-bqyKva dfRFOj"
              data-testid="Step1-password"
              id="password"
              name="password"
              placeholder="Secure password (7-64 characters)"
              type="password"
              value=""
            />
          </div>
          <div
            class="sc-dlfnbm cKcjXC"
          >
            <button
              class="sc-eCssSg fzHHEK"
              color="blue"
              data-testid="Step1-next-btn"
              disabled=""
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Signup /> Check how renders should render with Step2 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ VOJFF"
  >
    <h3
      class="sc-jrAGrp hNpMLZ"
    >
      Register new account
    </h3>
    <div
      class="progress-bar-box"
    >
      <div
        class="sc-kEjbxe czbdkt"
      >
        <div
          class="step-box active"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-checkmark-visible"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-number-hidden"
            >
              1
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill active"
          />
        </div>
        <div
          class="step-box active"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-number-visible"
            >
              2
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill"
          />
        </div>
        <div
          class="step-box"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-number-visible"
            >
              3
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-hKgILt cAntWy"
      height="46"
    >
      <form
        action="#"
        class="formik-form"
      >
        <div
          class="sc-gsTCUz mRRDa"
          data-testid="Step2"
          style="opacity: 1;"
        >
          <div
            class="sc-dQppl eVncb"
            type="text"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="firstName"
            >
              First name
            </label>
            <input
              autocomplete="given-name"
              class="sc-bqyKva dfRFOj"
              data-testid="Step2-firstName"
              id="firstName"
              name="firstName"
              placeholder="Your first name (up to 60 characters)"
              type="text"
              value=""
            />
          </div>
          <div
            class="sc-dQppl eVncb"
            type="text"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="lastName"
            >
              Last name
            </label>
            <input
              autocomplete="family-name"
              class="sc-bqyKva dfRFOj"
              data-testid="Step2-lastName"
              id="lastName"
              name="lastName"
              placeholder="Your last name (up to 80 characters)"
              type="text"
              value=""
            />
          </div>
          <span
            class="sc-iBPRYJ fQTCab"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            Name is visible only to user you will place order with (and you can change it to specific order)
          </span>
          <div
            class="sc-fodVxV cYAnxR"
          >
            <div
              class="sc-dQppl eVncb"
            >
              <label
                class="sc-kstrdz dcXmaZ"
                for="phonePrefix"
              >
                Phone number prefix
              </label>
              <div
                class="select css-2b097c-container"
                id="phonePrefix"
              >
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-yk16xz-control"
                >
                  <div
                    class=" css-g1d714-ValueContainer"
                  >
                    <div
                      class=" css-1wa3eu0-placeholder"
                    >
                      Choose your phone number prefix
                    </div>
                    <div
                      class="css-b8ldur-Input"
                    >
                      <div
                        class=""
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="react-select-2-input"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="phonePrefix"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
            <div
              class="sc-dQppl eVncb"
              type="text"
            >
              <label
                class="sc-kstrdz dcXmaZ"
                for="phoneNumber"
              >
                Phone number
              </label>
              <input
                autocomplete="tel-national"
                class="sc-bqyKva dfRFOj"
                data-testid="Step2-phoneNumber"
                id="phoneNumber"
                name="phoneNumber"
                placeholder="Your phone number (numbers, dashes)"
                type="text"
                value=""
              />
            </div>
          </div>
          <span
            class="sc-iBPRYJ fQTCab"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            You can change phone number to specific order
          </span>
          <div
            class="sc-dQppl echBYe"
            type="checkbox"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="hidePhone"
            >
              Hide my phone number from others
            </label>
            <input
              class="sc-bqyKva dfRFOj"
              data-testid="Step2-hidePhone"
              id="hidePhone"
              name="hidePhone"
              type="checkbox"
              value="false"
            />
          </div>
          <span
            class="sc-iBPRYJ fQTCab"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            Phone number is visible to everyone by default. You can hide it from others (it will still be visible to user who will place order with you and to user you will place order with)
          </span>
          <div
            class="sc-dlfnbm dFxZbs"
          >
            <button
              class="sc-eCssSg MTeOr"
              color="blue"
              data-testid="Step2-previous-btn"
              type="button"
            >
              Previous
            </button>
            <button
              class="sc-eCssSg fzHHEK"
              color="blue"
              data-testid="Step2-next-btn"
              disabled=""
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Signup /> Check how renders should render with Step3 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ VOJFF"
  >
    <h3
      class="sc-jrAGrp hNpMLZ"
    >
      Register new account
    </h3>
    <div
      class="progress-bar-box"
    >
      <div
        class="sc-kEjbxe czbdkt"
      >
        <div
          class="step-box active"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-checkmark-visible"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-number-hidden"
            >
              1
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill active"
          />
        </div>
        <div
          class="step-box active"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-checkmark-visible"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-number-hidden"
            >
              2
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill active"
          />
        </div>
        <div
          class="step-box active"
        >
          <span
            class="sc-iBPRYJ hdpxjS"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="sc-iqHYGH fRQVGl"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="sc-crrsfI fibqbd"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-iqHYGH gWdKKQ"
              data-testid="ProgressBar-step-box-number-visible"
            >
              3
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-hKgILt cAntWy"
      height="46"
    >
      <form
        action="#"
        class="formik-form"
      >
        <div
          class="sc-gsTCUz mRRDa"
          data-testid="Step3"
          style="opacity: 1;"
        >
          <span
            class="sc-iBPRYJ ixOMCN"
            color=""
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            These data will be visible only to user you will place order with (and you can change it to specific order)
          </span>
          <div
            class="sc-dQppl eVncb"
            type="text"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="street"
            >
              Street and number
            </label>
            <input
              autocomplete="street-address"
              class="sc-bqyKva dfRFOj"
              data-testid="Step3-street"
              id="street"
              name="street"
              placeholder="Your street and number"
              type="text"
              value=""
            />
          </div>
          <div
            class="sc-fodVxV gNpXpj"
          >
            <div
              class="sc-dQppl eVncb"
              type="text"
            >
              <label
                class="sc-kstrdz dcXmaZ"
                for="zipCode"
              >
                Zip code
              </label>
              <input
                autocomplete="postal-code"
                class="sc-bqyKva dfRFOj"
                data-testid="Step3-zipCode"
                id="zipCode"
                name="zipCode"
                placeholder="Your zip code"
                type="text"
                value=""
              />
            </div>
            <div
              class="sc-dQppl eVncb"
              type="text"
            >
              <label
                class="sc-kstrdz dcXmaZ"
                for="city"
              >
                City
              </label>
              <input
                autocomplete="address-level2"
                class="sc-bqyKva dfRFOj"
                data-testid="Step3-city"
                id="city"
                name="city"
                placeholder="Your city"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="sc-dQppl eVncb"
          >
            <label
              class="sc-kstrdz dcXmaZ"
              for="country"
            >
              Country
            </label>
            <div
              class="select css-2b097c-container"
              id="country"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-yk16xz-control"
              >
                <div
                  class=" css-g1d714-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Choose your country
                  </div>
                  <div
                    class="css-b8ldur-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-4-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="country"
                type="hidden"
                value=""
              />
            </div>
          </div>
          <span
            class="sc-iBPRYJ ixOMCN"
            color=""
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            We will send verification link to email provided by you. It will be active for 10 minutes, but you will be able to resend the activation link later. If you do not activate your account within 1 hour, account will be deleted permanently
          </span>
          <div
            class="sc-dlfnbm dFxZbs"
          >
            <button
              class="sc-eCssSg MTeOr"
              color="blue"
              data-testid="Step3-previous-btn"
              type="button"
            >
              Previous
            </button>
            <button
              class="sc-eCssSg fzHHEK"
              color="blue"
              disabled=""
              type="submit"
            >
              Finish
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
